# lab3-metadata

./: .env  .gitattributes  README.md  airflow.compose.yaml  compose.airflow.yaml  compose.yaml  debug_entrypoint.sh  envs  pyproject.toml
airflow_dockerfile/: Dev.Dockerfile  Dockerfile  requirements.txt
config/: airflow.cfg
dags/: fake_source_loader.py  map_example.py  schemas.py  test_debug.py  transfer_dag.py  transfer_manager.py
plugins/: transfer_manager.py
postgres-init/: init_db.sql
secrets/: example
